--- a/style.css
+++ b/style.css
@@ -1,29 +1,29 @@
-.item1 { grid-area: Title; }
-.item2 { grid-area: Books; }
-.item3 { grid-area: Characters; }
-.item4 { grid-area: Houses; }
-.item5 { grid-area: Other; }
-
-
-.grid-container {
-  display: grid;
-  grid-template-areas:
-    'Title Title Title'
-    'Books Characters Characters'
-    'Books Houses Houses'
-    'Books Other Other';
-  grid-gap: 10px;
-  background-color: #2196F3;
-  padding: 10px;
-}
-
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
-  font-size: 30px;
+.GOZ {
+	font-family: "Game of Thrones";
+	text-align: center;
+	color: white;
 }
 
 img {
-  width: 500px;
+	width: 500px;
+	border: solid 5px;
+	border-color: black;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
+
+a {
+	text-align: center;
+}
+
+* {
+	text-align: center;
+}
+
+body {
+	background-image: url("https://blacksportsonline.com/wp-content/uploads/2016/04/kobe-game-of-zones.jpg");
+	background-repeat: repeat;
+}
+
+
